--- a/static_questionnaires/dvprs.html
+++ b/static_questionnaires/dvprs.html
@@ -4,12 +4,32 @@
     <title>Pain Rating Scale</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-theme.min.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+        <header>
+                <nav class="navbar navbar-dark bg-dark mb-4">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="../index.html">PASTOR</a>
+                        <div class="row">
+                            <div class="col-md-12">
+                            <a class="btn btn-dark" href="dvprs.html">DVPRS</a>
+                            <a class="btn btn-dark" href="PROMIS_pres_pain_misuse_v1.0.html">Prescription Pain Misuse</a>
+                            <a class="btn btn-dark" href="ptsdscreener.html">PTSD Screener</a>
+                            <a class="btn btn-dark" href="treatment_history.html">Treatment History</a>
+                            <a class="btn btn-dark" href="adherence_to_treatment.html">Adherence to Treatment</a>
+                            <a class="btn btn-dark" href="global_health_neuropathic_pain.html">Global Health &amp; Neuropathic Pain </a>
+                            <a class="btn btn-dark" href="headache.html">Headache</a>
+                        </div></div>
+                    </div>
+                </nav>
+        
+        
+            </header>
 <div class="container bg-white text-center">
     <div class="row"><h3>INSTRUCTIONS: For the 1st 3 questions, look at the “Defense and Veterans Pain Rating Scale” and read the descriptions under each number.
         and answer the specific pain question by selecting the corresponding number (0 to 10).</h3>
@@ -122,7 +142,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-12 questions">
-                  3) Select the one number that describes how, during the past 24 hours, pain has affected your <u>Mood:</u><br>
+                  3) Select the one number that describes how, during the past 24 hours, pain has affected your <u>MOOD:</u><br>
                   <img src="assets/images/mood.png" width="75%"/><br>
                   Mood: <select> 
                     <option value="0">0</option>
@@ -143,7 +163,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-12 questions">
-                  4) Select the one number that describes how, during the past 24 hours, pain has contributed to your <u>Stress:</u><br>
+                  4) Select the one number that describes how, during the past 24 hours, pain has contributed to your <u>STRESS:</u><br>
                   <img src="assets/images/stress.png" width="75%"/><br>
                   Stress: <select> 
                     <option value="0">0</option>
