--- a/static_questionnaires/dvprs.html
+++ b/static_questionnaires/dvprs.html
@@ -97,7 +97,7 @@
         
             </div>
             <hr>
-            <div class="row text-center"> <h2>PAIN SUPPLEMENTAL QUESTIONS</h2><h3>INSTRUCTIONS: For the following 4 Pain Supplemental Questions, please rate how pain has interfered for the past 24 hours by selecting the number.</h3>
+            <div class="row text-center"> <div class="text-center"><h2>PAIN SUPPLEMENTAL QUESTIONS</h2><h4>INSTRUCTIONS: For the following 4 Pain Supplemental Questions, please rate how pain has interfered for the past 24 hours by selecting the number.</h4></div>
                
                 <div class="col-md-12 questions">
                   1) Select the one number that describes how, during the past 24 hours, pain has interfered with your usual <u>ACTIVITY:</u><br>
