--- a/static_questionnaires/PROMIS_pres_pain_misuse_v1.0.html
+++ b/static_questionnaires/PROMIS_pres_pain_misuse_v1.0.html
@@ -12,118 +12,135 @@
     <!-- <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"> -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-        <header>
-                <nav class="navbar navbar-dark bg-dark mb-4">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html">PASTOR</a>
-                        <div class="row">
-                            <div class="col-md-12">
-                            <a class="btn btn-dark" href="dvprs.html">DVPRS</a>
-                            <a class="btn btn-dark" href="PROMIS_pres_pain_misuse_v1.0.html">Prescription Pain Misuse</a>
-                            <a class="btn btn-dark" href="ptsdscreener.html">PTSD Screener</a>
-                            <a class="btn btn-dark" href="treatment_history.html">Treatment History</a>
-                            <a class="btn btn-dark" href="adherence_to_treatment.html">Adherence to Treatment</a>
-                            <a class="btn btn-dark" href="global_health_neuropathic_pain.html">Global Health &amp; Neuropathic Pain </a>
-                            <a class="btn btn-dark" href="headache.html">Headache</a>
-                        </div></div>
+    <header>
+        <nav class="navbar navbar-dark bg-dark mb-4">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">PASTOR</a>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a class="btn btn-dark" href="dvprs.html">DVPRS</a>
+                        <a class="btn btn-dark" href="PROMIS_pres_pain_misuse_v1.0.html">Prescription Pain Misuse</a>
+                        <a class="btn btn-dark" href="ptsdscreener.html">PTSD Screener</a>
+                        <a class="btn btn-dark" href="treatment_history.html">Treatment History</a>
+                        <a class="btn btn-dark" href="adherence_to_treatment.html">Adherence to Treatment</a>
+                        <a class="btn btn-dark" href="global_health_neuropathic_pain.html">Global Health &amp; Neuropathic Pain </a>
+                        <a class="btn btn-dark" href="headache.html">Headache</a>
                     </div>
-                </nav>
-        
-        
-            </header>
+                </div>
+            </div>
+        </nav>
+
+
+    </header>
+
+
+
     <div class="container">
         <div class="row questionInstructions text-center">
+            <div class="col-md-12">
             <h2>PROMIS SF v1.0 - Prescription Pain Med Misuse
             </h2>
-            <hr>
-            <h3>Please respond to each question or statement by marking one button per row.</h3>
+            <hr></div></div>
+            <div class="row questionInstructions text-center">
+            <h3>Please respond to each question or statement by marking one button per row.</h3></div>
+            <div class="row">
             <div class="col-md-12 questions text-left">
                 In the past 3 months, did you have a prescription for pain medication?
                 <br>
-                <button type="button" class="btn btn-secondary">Yes</button>
+                <button type="button" class="btn btn-secondary" onclick="show()">Yes</button>
                 <button type="button" class="btn btn-secondary">No</button>
             </div>
         </div>
-        <div class="row questionSubsection">
-            <h3>In the past 3 months...
-            </h3>
-            <div class="col-md-12 questions text-left">
-                I abused prescription pain medication...
-                <br>
-                <button type="button" class="btn btn-secondary">Never</button>
-                <button type="button" class="btn btn-secondary">Rarely</button>
-                <button type="button" class="btn btn-secondary">Sometimes</button>
-                <button type="button" class="btn btn-secondary">Often</button>
-                <button type="button" class="btn btn-secondary">Almost Always</button>
-            </div>
+        <div id="hideThisIfNo">
+            <div class="row questionSubsection">
+                <h3>In the past 3 months...
+                </h3>
+                <div class="col-md-12 questions text-left">
+                    I abused prescription pain medication...
+                    <br>
+                    <button type="button" class="btn btn-secondary">Never</button>
+                    <button type="button" class="btn btn-secondary">Rarely</button>
+                    <button type="button" class="btn btn-secondary">Sometimes</button>
+                    <button type="button" class="btn btn-secondary">Often</button>
+                    <button type="button" class="btn btn-secondary">Almost Always</button>
+                </div>
 
-            <div class="col-md-12 questions text-left">
-                I ran out of prescription pain medication early...
-                <br>
-                <button type="button" class="btn btn-secondary">Never</button>
-                <button type="button" class="btn btn-secondary">Rarely</button>
-                <button type="button" class="btn btn-secondary">Sometimes</button>
-                <button type="button" class="btn btn-secondary">Often</button>
-                <button type="button" class="btn btn-secondary">Almost Always</button>
-            </div>
+                <div class="col-md-12 questions text-left">
+                    I ran out of prescription pain medication early...
+                    <br>
+                    <button type="button" class="btn btn-secondary">Never</button>
+                    <button type="button" class="btn btn-secondary">Rarely</button>
+                    <button type="button" class="btn btn-secondary">Sometimes</button>
+                    <button type="button" class="btn btn-secondary">Often</button>
+                    <button type="button" class="btn btn-secondary">Almost Always</button>
+                </div>
 
-            <div class="col-md-12 questions text-left">
-                I got prescription pain medication from someone other than my healthcare provider...
-                <br>
-                <button type="button" class="btn btn-secondary">Never</button>
-                <button type="button" class="btn btn-secondary">Rarely</button>
-                <button type="button" class="btn btn-secondary">Sometimes</button>
-                <button type="button" class="btn btn-secondary">Often</button>
-                <button type="button" class="btn btn-secondary">Almost Always</button>
-            </div>
+                <div class="col-md-12 questions text-left">
+                    I got prescription pain medication from someone other than my healthcare provider...
+                    <br>
+                    <button type="button" class="btn btn-secondary">Never</button>
+                    <button type="button" class="btn btn-secondary">Rarely</button>
+                    <button type="button" class="btn btn-secondary">Sometimes</button>
+                    <button type="button" class="btn btn-secondary">Often</button>
+                    <button type="button" class="btn btn-secondary">Almost Always</button>
+                </div>
 
-            <div class="col-md-12 questions text-left">
-                I used more of my prescription pain medication than I was supposed to...
-                <br>
-                <button type="button" class="btn btn-secondary">Never</button>
-                <button type="button" class="btn btn-secondary">Rarely</button>
-                <button type="button" class="btn btn-secondary">Sometimes</button>
-                <button type="button" class="btn btn-secondary">Often</button>
-                <button type="button" class="btn btn-secondary">Almost Always</button>
-            </div>
-            <div class="col-md-12 questions text-left">
-                I experienced cravings for pain medication...
-                <br>
-                <button type="button" class="btn btn-secondary">Never</button>
-                <button type="button" class="btn btn-secondary">Rarely</button>
-                <button type="button" class="btn btn-secondary">Sometimes</button>
-                <button type="button" class="btn btn-secondary">Often</button>
-                <button type="button" class="btn btn-secondary">Almost Always</button>
-            </div>
+                <div class="col-md-12 questions text-left">
+                    I used more of my prescription pain medication than I was supposed to...
+                    <br>
+                    <button type="button" class="btn btn-secondary">Never</button>
+                    <button type="button" class="btn btn-secondary">Rarely</button>
+                    <button type="button" class="btn btn-secondary">Sometimes</button>
+                    <button type="button" class="btn btn-secondary">Often</button>
+                    <button type="button" class="btn btn-secondary">Almost Always</button>
+                </div>
+                <div class="col-md-12 questions text-left">
+                    I experienced cravings for pain medication...
+                    <br>
+                    <button type="button" class="btn btn-secondary">Never</button>
+                    <button type="button" class="btn btn-secondary">Rarely</button>
+                    <button type="button" class="btn btn-secondary">Sometimes</button>
+                    <button type="button" class="btn btn-secondary">Often</button>
+                    <button type="button" class="btn btn-secondary">Almost Always</button>
+                </div>
             </div>
             <div class="row questionSubsection">
-                    <h3>In the past 3 months...
-                    </h3>
-                    <div class="col-md-12 questions text-left">
-                       When my prescription for pain medication ran out, I felt anxious...
-                        <br>
-                        <button type="button" class="btn btn-secondary">Not at all</button>
-                        <button type="button" class="btn btn-secondary">A little bit</button>
-                        <button type="button" class="btn btn-secondary">Somewhat</button>
-                        <button type="button" class="btn btn-secondary">Quite a bit</button>
-                        <button type="button" class="btn btn-secondary">Very Much</button>
-                    </div>
-                    </div>
-                    <div class="row questionSubsection">
-                            <h3>In the past 3 months...
-                            </h3>
-                            <div class="col-md-12 questions text-left">
-                                I used more pain medication before the effects wore off...
-                                <br>
-                                <button type="button" class="btn btn-secondary">Never</button>
-                                <button type="button" class="btn btn-secondary">Rarely</button>
-                                <button type="button" class="btn btn-secondary">Sometimes</button>
-                                <button type="button" class="btn btn-secondary">Often</button>
-                                <button type="button" class="btn btn-secondary">Almost Always</button>
-                            </div>
+                <h3>In the past 3 months...
+                </h3>
+                <div class="col-md-12 questions text-left">
+                    When my prescription for pain medication ran out, I felt anxious...
+                    <br>
+                    <button type="button" class="btn btn-secondary">Not at all</button>
+                    <button type="button" class="btn btn-secondary">A little bit</button>
+                    <button type="button" class="btn btn-secondary">Somewhat</button>
+                    <button type="button" class="btn btn-secondary">Quite a bit</button>
+                    <button type="button" class="btn btn-secondary">Very Much</button>
+                </div>
+            </div>
+            <div class="row questionSubsection">
+                <h3>In the past 3 months...
+                </h3>
+                <div class="col-md-12 questions text-left">
+                    I used more pain medication before the effects wore off...
+                    <br>
+                    <button type="button" class="btn btn-secondary">Never</button>
+                    <button type="button" class="btn btn-secondary">Rarely</button>
+                    <button type="button" class="btn btn-secondary">Sometimes</button>
+                    <button type="button" class="btn btn-secondary">Often</button>
+                    <button type="button" class="btn btn-secondary">Almost Always</button>
+                </div>
+            </div>
         </div>
     </div>
+
+    <script>
+        document.getElementById("hideThisIfNo").style.visibility = "hidden"
+        function show(){
+            document.getElementById("hideThisIfNo").style.visibility = "visible"
+        }
+    </script>
 </body>
 
 
