promis disclaimer added

--- a/static_questionnaires/PROMIS_pres_pain_misuse_v1.0.html
+++ b/static_questionnaires/PROMIS_pres_pain_misuse_v1.0.html
@@ -41,7 +41,7 @@
         <div class="row questionInstructions text-center">
             <div class="col-md-12">
                 <h2>PROMIS SF v1.0 - Prescription Pain Med Misuse
-                </h2>
+                </h2><h4>Educational-demo purposes only, note footer Terms and Conditions of use.</h4>
                 <hr>
             </div>
         </div>
@@ -148,6 +148,10 @@
             document.getElementById("hideThisIfNo").style.visibility = "visible"
         }
     </script>
+
+    <footer>
+            PROMIS measures are copyrighted. All English and Spanish PROMIS measures are publicly available for use in one’s individual research, clinical practice, educational assessment, or other application without licensing or royalty fees. Commercial users must seek permission to use, reproduce, or distribute measures. Integration into proprietary technology requires written permission. Read the <a href="http://www.healthmeasures.net/images/PROMIS/Terms_of_Use_HM_approved_1-12-17_-_Updated_Copyright_Notices.pdf"/>PROMIS Terms and Conditions of Use</a> for more information.
+    </footer>
 </body>
 
 
