PROMIS disclaimer for global health and neuropathic pain

--- a/static_questionnaires/global_health_neuropathic_pain.html
+++ b/static_questionnaires/global_health_neuropathic_pain.html
@@ -35,6 +35,7 @@
 
 <div class="container">
     <h2>Global Health &amp; Neuropathic Pain</h2>
+    <h4 style="text-align:center">for educational-demo purposes only. See footer for PROMIS Terms of Use</h4>
 
     <div class="row">
         <div class="col-md-12">
@@ -97,6 +98,7 @@
         createQuestions();
     </script>
     <footer>
+            PROMIS measures are copyrighted. All English and Spanish PROMIS measures are publicly available for use in one’s individual research, clinical practice, educational assessment, or other application without licensing or royalty fees. Commercial users must seek permission to use, reproduce, or distribute measures. Integration into proprietary technology requires written permission. Read the <a href="http://www.healthmeasures.net/images/PROMIS/Terms_of_Use_HM_approved_1-12-17_-_Updated_Copyright_Notices.pdf"/>PROMIS Terms and Conditions of Use</a> for more information.
     </footer>
 
 </body>
